created big template for sharing buttons

--- a/app/client/css/sharingButtons.css
+++ b/app/client/css/sharingButtons.css
@@ -1,4 +1,4 @@
-.SharingWithCode {
+.SharingWithCodeSmall {
   text-align: center;
 }
 
@@ -6,7 +6,7 @@
 
 }
 
-.SharingWithCode ul {
+.SharingWithCodeSmall ul {
   padding-left: 0;
 }
 
