--- a/app/client/templates/bits/SharingWithCodeSmall.html
+++ b/app/client/templates/bits/SharingWithCodeSmall.html
@@ -1,5 +1,5 @@
-<template name="SharingWithCode">
-  <div class="SharingWithCode">
+<template name="SharingWithCodeSmall">
+  <div class="SharingWithCodeSmall">
     <ul class="sharingButtonsList">
       <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{entryCode}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i></a></li>
       <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i></a></li>
