--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             {{#if acceptingNewMembers}}
-              {{> SharingWithCode entryCode=_id}}
+              {{> SharingWithCodeSmall entryCode=_id}}
             {{else}}
               {{> MiniActiveLeagueDetails}}
             {{/if}}
