--- a/app/client/templates/bits/KillerChoiceWidget.html
+++ b/app/client/templates/bits/KillerChoiceWidget.html
@@ -1,5 +1,6 @@
 <template name="KillerChoiceWidget">
   <div class="KillerChoiceWidget">
+    <span class="pull-left killer-panel-icon"><i class="fa fa-clock-o"></i></span>
     {{#if userDiedInRound}}
       <span>Your final pick was {{lastChoice}} in round: {{userDiedInRound}}</span>
     {{else}}
@@ -24,22 +25,18 @@
 </template>
 
 <template name="KillerChoiceForm">
-  <div id="KillerChoiceForm">
     <div class="container-fluid">
       <form class="killerChoiceForm form-inline">
-        <div class="form-group">
-          <div class="input-group">
-            <label class="sr-only" for="DD_{{this._id}}">Pick a team</label>
-            <select class="teamsLeftDropDown form-control select-responsive" id="DD_{{this._id}}">
-              <option selected="true" disabled>Pick a team</option>
-              {{#each teamsLeft}}
-                <option value={{.}}>{{.}}</option>
-              {{/each}}
-            </select>
-            <span class="input-group-btn"><button type="submit" name="killerChoiceButton" value="Submit" class="btn btn-default btn-responsive">Submit</button></span>
-          </div>
+        <div class="input-group">
+          <label class="sr-only" for="DD_{{this._id}}">Pick a team</label>
+          <select class="teamsLeftDropDown form-control select-responsive" id="DD_{{this._id}}">
+            <option selected="true" disabled>Pick a team</option>
+            {{#each teamsLeft}}
+              <option value={{.}}>{{.}}</option>
+            {{/each}}
+          </select>
+          <span class="input-group-btn"><button type="submit" name="killerChoiceButton" value="Submit" class="btn btn-default btn-responsive">Submit</button></span>
         </div>
       </form>
     </div>
-  </div>
 </template>
