--- a/app/client/css/leagues.css
+++ b/app/client/css/leagues.css
@@ -67,10 +67,10 @@
   text-align: left;
 }
 
-.killerChoiceForm select {
+/*.killerChoiceForm select {
   width : auto !important;
   display: inline;
-}
+}*/
 
 .killerChoiceForm .form-group, .repickChoiceForm .btn {
   margin-top: 5px;
@@ -81,10 +81,6 @@
 
 .hidden-mobile-details.in, .hidden-mobile-details.collapsing {
   display: block !important;
-}
-
-.show-hide-info {
-
 }
 
 .two-cols {
@@ -108,26 +104,16 @@
 }
 
 .killer-panel {
-  background-color : rgba(200,200,200,0.4);
+  /*background-color : rgba(200,200,200,0.4);*/
   width : 290px;
   margin-bottom: 10px;
 }
 
-.killer-panel-matches {
-  padding: 0;
-}
-
-.killer-panel-matches ul {
-  padding-left : 0;
-  list-style-type: none;
-  font-size: 8px;
-  text-align: left;
-}
-
-.killer-panel-matches ul li {
-  background-color: rgba(8, 10, 64, 0.8);
-  margin-bottom : 3px;
-  color: white;
+@media screen and (min-width : 350px) {
+  .killer-panel {
+    margin-right: auto !important;
+    margin-left: auto !important;
+  }
 }
 
 .killer-panel-bar {
@@ -169,7 +155,7 @@
 }
 
 .killer-panel-set {
-  max-width : 235px;
+  max-width : 238px;
   margin-right : 3px;
 }
 
@@ -177,6 +163,101 @@
   font-size: 130%;
 }
 
+.killer-panel-widget {
+  padding-right : 5px;
+}
+
 .KillerChoiceWidget {
   text-align: center;
+}
+
+.killerChoiceForm {
+  display: inline-block;
+  font-size: 10px;
+  height: 22px;
+  color: black;
+}
+
+.killerChoiceForm select {
+  border-radius: 3px;
+}
+
+.killer-choice-button {
+  line-height: 1;
+  font-size: 10px;
+  padding: 3px 5px;
+  border-radius: 2px;
+  color: black;
+}
+
+.pick-name {
+  font-weight: bold;
+  font-size: 12px;
+  color: white;
+}
+
+.small-text {
+  /*text-shadow: 7px;*/
+}
+
+.matches-title {
+  text-align: center;
+  background-color: white !important;
+  color: black !important;
+}
+/*
+li:before {
+    content:'•';
+    float: left;
+    width: 20px;
+    font-size: 1.8em;
+    line-height: 0.75em;
+}*/
+
+
+.killer-panel-matches {
+  padding: 0;
+}
+
+.killer-panel-matches ul {
+  padding-left : 0;
+  list-style-type: none;
+  font-size: 8px;
+  text-align: center;
+  height: 144px;
+  display: table;
+  margin-bottom: 0;
+}
+
+.killer-panel-matches ul li {
+  background-color: rgba(8, 10, 64, 0.8);
+  margin-bottom : 3px;
+  color: white;
+  display: table-row;
+}
+
+.MiniActiveLeagueDetails {
+  display: inline-block;
+}
+
+.MiniActiveLeagueDetails ul {
+  padding-left: 0;
+  list-style-type: none;
+  display: table;
+  height: 56px;
+}
+
+.MiniActiveLeagueDetails ul li {
+  padding-left: 0;
+  list-style-type: none;
+  display: table-row;
+}
+
+.killer-panel-pulldown {
+  height : auto !important;
+  min-height: 25px;
+}
+
+.show-hide-info {
+  color: white !important;
 }
