--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -59,80 +59,6 @@
   <!-- </div> -->
 </template>
 
-<!-- <template name="LeaguePanel">
-  <div class="LeaguePanel">
-    <div class="panel panel-success">
-
-      <div class="panel-heading">
-        <h3 class="panel-title">League: <span class="league-name">"{{leagueName}}"</span></h3>
-      </div>
-
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-xs-12 panel-deadline">
-            {{#if equals currentGameStatus "active"}}
-              <span>Matches are being played. See who your rivals picked below</span>
-            {{else}}
-              <span>DEADLINE: {{formatDate leagueDeadline "deadlineDate"}}</span>
-            {{/if}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            {{#if acceptingNewMembers}}
-              {{> SharingWithCodeSmall entryCode=_id}}
-            {{else}}
-              {{> MiniActiveLeagueDetails}}
-            {{/if}}
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            {{> KillerChoiceWidget}}
-          </div>
-        </div>
-
-        <div>
-          <a class="show-hide-info" data-toggle="collapse" href="#collapseDetails{{_id}}" aria-expanded="false"><span class="caret"></span><span class="caret"></span><span class="caret"></span> {{showHidePlayersChoices}} <span class="caret"></span><span class="caret"></span><span class="caret"></span></a>
-          <div id="collapseDetails{{_id}}" class="collapse-details collapse">
-            <div class="row">
-              {{#if acceptingNewMembers}}
-                <div class="col-xs-12 col-lg-12">
-                  <ul class="players-list">
-                    <h5>The following players have joined:</h5>
-                    {{#each members}}
-                      <li><i class="fa fa-futbol-o"></i> {{memberName}}</li>
-                    {{/each}}
-                  </ul>
-                </div>
-              {{else}}
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                  <ul class="players-list">
-                    <h5>Active players</h5>
-                    {{#each aliveMembers}}
-                      <li><i class="fa fa-futbol-o"></i> {{memberName}}
-                        {{#if equals currentGameStatus "active"}}
-                           - {{memberChoice}}{{#if isAutoPick}} (autopick){{/if}}
-                        {{/if}}
-                      </li>
-                    {{/each}}
-                  </ul>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                  <ul class="players-list">
-                    <h5>Eliminated players</h5>
-                    {{#each deadMembers}}
-                      <li><i class="fa fa-bomb"></i> {{memberName}} (round {{diedInRound}})</li>
-                    {{/each}}
-                  </ul>
-                </div>
-              {{/if}}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</template> -->
-
 <template name="MiniActiveLeagueDetails">
   <div class="MiniActiveLeagueDetails">
     <ul>
@@ -151,7 +77,7 @@
     <div id="collapseDetails{{_id}}" class="collapse-details collapse">
       <div class="row">
         {{#if acceptingNewMembers}}
-          <div class="col-xs-12 col-lg-12">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 killer-full-details">
             <ul class="players-list">
               <h5>The following players have joined:</h5>
               {{#each members}}
@@ -160,7 +86,7 @@
             </ul>
           </div>
         {{else}}
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 killer-full-details">
             <ul class="players-list">
               <h5>Active players</h5>
               {{#each aliveMembers}}
@@ -172,14 +98,16 @@
               {{/each}}
             </ul>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-            <ul class="players-list">
-              <h5>Eliminated players</h5>
-              {{#each deadMembers}}
-                <li><i class="fa fa-bomb"></i> {{memberName}} (round {{diedInRound}})</li>
-              {{/each}}
-            </ul>
-          </div>
+          {{#if deadMembers.[0]}}
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 killer-full-details">
+              <ul class="players-list">
+                <h5>Eliminated players</h5>
+                {{#each deadMembers}}
+                  <li><i class="fa fa-bomb"></i> {{memberName}} (round {{diedInRound}})</li>
+                {{/each}}
+              </ul>
+            </div>
+          {{/if}}
         {{/if}}
       </div>
     </div>
