display correct matches

--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -47,7 +47,7 @@
       <div class="col-xs-2 killer-panel-matches">
         <ul>
           <li class="matches-title">Fixtures</li>
-          {{#each listOfCurrentMatches}}
+          {{#each leagueMatches}}
             <li><span class="home-team">{{shorten home}}</span> v <span class="away-team">{{shorten away}}</span></li>
           {{/each}}
         </ul>
