--- a/app/client/templates/KillerFooter.html
+++ b/app/client/templates/KillerFooter.html
@@ -3,19 +3,15 @@
     <!-- TODO: make sharing buttons into a template -->
     <footer class="footer">
       <div class="row">
-        <div class="footerLeft col-xs-12 col-sm-6 col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-12">
           killerDOTfootball is a company registered in England & Wales
           <br>
           Registered number: 09948604
           <br>
           Registered office: 14, Palmers Road, London, E2 0SY
         </div>
-        <div class="footerRight col-xs-12 col-sm-6 col-md-6">
-          <ul class="sharingButtonsList pull-right">
-            <li><a href="https://twitter.com/killerpicks" class="btn btn-default btn-twitter" target="_blank"><i class="fa fa-twitter"></i> @KillerPicks</a></li>
-            <li><a href="https://www.facebook.com/killerDOTfootball" class="btn btn-default btn-facebook" target="_blank"><i class="fa fa-facebook"></i> Like</a></li>
-            <li><a href="mailto:chairman@killer.football?subject=Query" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Contact</a></li>
-          </ul>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          {{> SharingButtonsGeneral}}
         </div>
       </div>
     </footer>
