tweaked league toggle button

--- a/app/client/css/leagues.css
+++ b/app/client/css/leagues.css
@@ -90,10 +90,12 @@
 }
 
 .toggleLeagues {
-  background: rgba(232,219,219,0.9);
+  background: rgba(8, 10, 64, 0.8);
   text-align: center;
   padding: 5px;
   border-radius: 5px;
+  width: 320px;
+  margin: 0 auto 5px auto;
 }
 
 
