--- a/app/client/main.css
+++ b/app/client/main.css
@@ -168,6 +168,10 @@ text-align: center;
   padding-left: 15px;
 }
 
+.footer .row {
+  max-width: 100%;
+}
+
 /* Custom page header */
 .header {
   padding-bottom: 20px;
