added target blank to facebook link

--- a/app/client/templates/bits/SharingButtonsGeneral.html
+++ b/app/client/templates/bits/SharingButtonsGeneral.html
@@ -2,7 +2,7 @@
   <div class="SharingButtonsGeneral">
     <ul class="sharingButtonsList">
       <li><a href="https://twitter.com/killerpicks" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="https://facebook.com/killerDOTfootball" class="btn btn-default btn-facebook facebookNewLeagueShare"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://facebook.com/killerDOTfootball" target="_blank" class="btn btn-default btn-facebook facebookNewLeagueShare"><i class="fa fa-facebook"></i></a></li>
       <li><a href="mailto:chairman@killer.football?subject=Hello" class="btn btn-default btn-email emailNewLeagueShare" target="_blank"><i class="fa fa-envelope"></i></a></li>
     </ul>
   </div>
