--- a/app/client/templates/MyKillerAccount.html
+++ b/app/client/templates/MyKillerAccount.html
@@ -2,7 +2,7 @@
 <li class="dropdown">
   <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account details <span class="caret"></span></a>
   <ul class="dropdown-menu">
-    <li class="navbar-link">Logged in as {{loggedInUserFullName}}</li>
+    <li class="navbar-link">Logged in as:<br>{{loggedInUserFullName}}</li>
     <li class="navbar-link"><a href="#" id="changeEmailButton" class="modalButton" data-modal="modalChangeEmailForm">Change email</a></li>
     <li class="navbar-link"><a href="#" id="changePwdButton" class="modalButton" data-modal="modalChangePwdForm">Change password</a></li>
     <li class="navbar-link"><a href="#" id="logoutButton">Logout</a></li>
