added grid ssytem for banner

--- a/app/client/templates/KillerContent.html
+++ b/app/client/templates/KillerContent.html
@@ -5,15 +5,25 @@
         {{> LoggingInDialogue}}
       {{else}}
         {{#if currentUser}}
-          {{> KillerAdBannerTop}}
-          {{> KillerAdBannerLeft}}
-          {{#if Template.subscriptionsReady}}
-            {{> KillerGameWeekMatches}}
-            {{> KillerLeagues}}
-          {{else}}
-            {{> spinner}}
-          {{/if}}
-          {{> KillerAdBannerRight}}
+          <div class="row">
+            <div class="col-xs-12">
+              {{> KillerAdBannerTop}}
+            </div>
+            <div class="col-md-4 mobile-hidden" style="display:none">
+              {{> KillerAdBannerLeft}}
+            </div>
+            <div class="col-md-4">
+              {{#if Template.subscriptionsReady}}
+                {{> KillerGameWeekMatches}}
+                {{> KillerLeagues}}
+              {{else}}
+                {{> spinner}}
+              {{/if}}
+            </div>
+            <div class="col-md-4 mobile-hidden" style="display:none">
+              {{> KillerAdBannerRight}}
+            </div>
+          </div>
         {{else}}
           {{> SignUpLogIn}}
         {{/if}}
