all ads present and correct

--- a/app/client/templates/KillerContent.html
+++ b/app/client/templates/KillerContent.html
@@ -1,6 +1,6 @@
 <template name="KillerContent">
   <div id="KillerContent">
-    <div class="container">
+    <div class="container-fluid">
       {{#if loggingIn}}
         {{> LoggingInDialogue}}
       {{else}}
@@ -9,10 +9,10 @@
             <div class="col-xs-12">
               {{> KillerAdBannerTop}}
             </div>
-            <div class="col-md-4 mobile-hidden" style="display:none">
+            <div class="col-md-3 mobile-hidden" style="display:none">
               {{> KillerAdBannerLeft}}
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               {{#if Template.subscriptionsReady}}
                 {{> KillerGameWeekMatches}}
                 {{> KillerLeagues}}
@@ -20,7 +20,7 @@
                 {{> spinner}}
               {{/if}}
             </div>
-            <div class="col-md-4 mobile-hidden" style="display:none">
+            <div class="col-md-3 mobile-hidden" style="display:none">
               {{> KillerAdBannerRight}}
             </div>
           </div>
