--- a/app/client/templates/KillerExplanation.html
+++ b/app/client/templates/KillerExplanation.html
@@ -2,12 +2,15 @@
   <div id="KillerExplanation">
     <div class="jumbotron">
       <h3>killer <i class="fa fa-futbol-o killer-dot"></i> football</h3>
-      <img class="bigLogo" src="https://s3-eu-west-1.amazonaws.com/killerpicks/killerZip.png" alt="Logo" />
+      <img class="bigLogo" src="https://s3-eu-west-1.amazonaws.com/killerpicks/killerbeta.png" alt="Logo" />
       <p class="lead">
         killer is a new, <b>free</b> football predictions game to play with friends, family, and colleagues.
       </p>
       <p class="smaller-font">
         Getting started is easy: set up a free league, invite your friends, pick one team to win over the weekend's Premier League action, and that's it! Get it right and you live to play for another week. Get it wrong, and it's game over!
+      </p>
+      <p class="smaller-font">
+        <b>BETA LAUNCH</b><br>Please bear with any frustrations/bugs you experience during this BETA period. To thank you for your patience, everyone who participates will be given free entry into a league with a real prize next season. All feedback & feature requests gratefully received at <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>.
       </p>
       <p><a class="btn modalButton" data-modal="modalSignupForm">Sign up now</a></p>
       <p>
