added blank target to all mailtos

--- a/app/client/templates/modals/JoinKillerLeague.html
+++ b/app/client/templates/modals/JoinKillerLeague.html
@@ -53,7 +53,7 @@
 <template name="JoinLeaguePreview">
   <div id="JoinLeaguePreview">
     <p>
-      Please review the details below and then hit confirm. If you have any questions, please email <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>
+      Please review the details below and then hit confirm. If you have any questions, please email <a href="mailto:chairman@killer.football?subject=help" target="_blank">chairman@killer.football</a>
     </p>
     <ul>
       <li>You are joining a league called {{leagueName}}</li>
