--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -23,7 +23,7 @@
                       Once the league is created you'll get a unique entry code to share with your friends.
                     </p>
                     <p>
-                      Questions? <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>
+                      Questions? <a href="mailto:chairman@killer.football?subject=help" target="_blank">chairman@killer.football</a>
                     </p>
                   </div>
                   {{> afQuickField name="leagueName" placeholder="Give your league a name"}}
