--- a/app/client/templates/KillerExplanation.html
+++ b/app/client/templates/KillerExplanation.html
@@ -10,7 +10,7 @@
         Getting started is easy: set up a free league, invite your friends, pick one team to win over the weekend's Premier League action, and that's it! Get it right and you live to play for another week. Get it wrong, and it's game over!
       </p>
       <p class="smaller-font">
-        <b>BETA LAUNCH</b><br>Please bear with any frustrations/bugs you experience during this BETA period. To thank you for your patience, everyone who participates will be given free entry into a league with a real prize next season. All feedback & feature requests gratefully received at <a href="mailto:chairman@killer.football?subject=help" target="_blank">chairman@killer.football</a>.
+        <b>BETA LAUNCH</b><br>Please bear with any frustrations/bugs you experience during this BETA period. (For example, the large areas of empty space are actually ads waiting to be approved.) To thank you for your patience, everyone who participates will be given free entry into a league with a real prize next season. All feedback & feature requests gratefully received at <a href="mailto:chairman@killer.football?subject=help" target="_blank">chairman@killer.football</a>.
       </p>
       <p><a class="btn modalButton" data-modal="modalSignupForm">Sign up now</a></p>
       <p>
