--- a/app/client/templates/MyKillerAccount.html
+++ b/app/client/templates/MyKillerAccount.html
@@ -3,7 +3,7 @@
   <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account details <span class="caret"></span></a>
   <ul class="dropdown-menu">
     <li class="navbar-link">Logged in as:<br>{{loggedInUserFullName}}</li>
-    <li class="navbar-link"><a href="#" id="changeEmailButton" class="modalButton" data-modal="modalChangeEmailForm">Change email</a></li>
+    <li class="navbar-link"><a href="#" id="changePwdButton" class="modalButton" data-modal="modalChangePwdForm">Change password</a></li>
     <li class="navbar-link"><a href="#" id="logoutButton">Log out</a></li>
     <li class="navbar-link"><a href="mailto:chairman@killer.football?subject=Help" target="_blank">Email help</a></li>
   </ul>
