--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -24,11 +24,11 @@
           <div class="col-xs-12 killer-panel-bar">
             <span class="pull-left killer-panel-icon"><i class="fa fa-clock-o"></i></span>
             {{#if equals currentGameStatus "active"}}
-              {{#if acceptingNewMembers}}
+              {{#unless acceptingNewMembers}}
                 <span>Matches in progress...</span>
               {{else}}
                 <span>{{formatDate leagueDeadline "deadlineDate"}}</span>
-              {{/if}}
+              {{/unless}}
             {{else}}
               <span>{{formatDate leagueDeadline "deadlineDate"}}</span>
             {{/if}}
