added public league

--- a/app/client/templates/WelcomeNote.html
+++ b/app/client/templates/WelcomeNote.html
@@ -5,6 +5,8 @@
       <img class="bigLogo" src="https://s3-eu-west-1.amazonaws.com/killerpicks/killerbeta.png" alt="Logo" />
       <p class="lead">
         It looks like you aren't part of any leagues right now. If it's your first time here, see how to get started below, or read the <a class="modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</a>.
+        <br>
+        Otherwise, you can enter the Public League - entry code <b>jiRGyteHmnaQCpxA5</b>
       </p>
       <div class="getting-started">
         <h4>Getting started</h4>
