--- a/app/client/templates/modals/JoinKillerLeague.html
+++ b/app/client/templates/modals/JoinKillerLeague.html
@@ -15,6 +15,8 @@
             <form id="joinLeagueForm" hidden={{showLeaguePreview}} class="form-inline">
               <p>
                 If you've been sent a league entry code, paste it below. You will be able to review the details after pressing "submit".
+                <br>
+                Or feel free to join the public league - code: <b>jiRGyteHmnaQCpxA5</b>
               </p>
               <div class="form-group">
                 <div class="input-group">
